<resources>
    <string name="app_name">MaterialDesignSample</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_query_input">What do you feel like eating?</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="feeling_lucky">I\'m Feeling Lucky</string>
    <string name="home">Home</string>
    <string name="my_recipes">My recipes</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="people">People</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="rejasupotaro">rejasupotaro</string>
</resources>
